# typify_gostruct

./: .gitignore  Cargo.toml  README.md
examples/: flow.rs  parse.rs  typescript.rs
examples/flow/: main.rs
examples/typescript/: main.rs
src/: ast.rs  data_types.rs  lib.rs  parser.rs  scanner.rs
src/interpreters/: flow.rs  mod.rs  typescript.rs
src/scanner/: scanner.rs
src/treewalk/: ast.rs  interpreter.rs  mod.rs  new_ast.rs  new_parser.rs  parser.rs  parser_new.rs
tests/: flow_test.rs
typify_gostruct/: Cargo.toml  README.md
typify_gostruct/examples/: flow.rs  typescript.rs
typify_gostruct/src/: ast.rs  lib.rs  parser.rs
typify_gostruct/src/interpreters/: flow.rs  typescript.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
www/: .eslintrc.json  next.config.js  package-lock.json  package.json
www/components/actionsWrapper/: index.tsx
www/components/container/: index.tsx
www/components/copyResults/: index.tsx
www/components/editor/: editor.tsx  interface.ts
www/components/editor/ace/: index.tsx
www/components/languagePicker/: index.tsx  interface.ts
www/components/splitEditorWrapper/: index.tsx
www/hooks/: useGoStructInterpreter.tsx
www/interpreter/: gostruct_wasm.ts  interface.ts
www/pages/: _app.tsx  index.tsx
