[package]
name = "typify_gostruct"
version = "1.0.0"
authors = ["Tevinthuku <tevinthuku@gmail.com>"]
edition = "2018"
description = "A rust tool meant to convert a golang struct to a type object of available languages."
repository = "https://github.com/tevs-rust-land/typify_gostruct"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
